--- a/package.json
+++ b/package.json
@@ -8,16 +8,26 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-react": "^1.0.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "node-sass": "^4.9.0",
     "node-sass-globbing": "^0.0.23",
     "nodemon": "^1.17.4",
+    "redux-logger": "^3.0.6",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-serve": "^1.0.2"
   },
   "dependencies": {
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.3.2",
     "sanitize.css": "^5.0.0"
   }
 }
