--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
-    "sanitize.css": "^5.0.0"
+    "sanitize.css": "^5.0.0",
+    "styled-components": "^3.3.0"
   }
 }
