--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-serve": "^1.0.2"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
@@ -29,6 +30,8 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
     "sanitize.css": "^5.0.0",
+    "slate": "^0.33.6",
+    "slate-react": "^0.12.6",
     "styled-components": "^3.3.0"
   }
 }
