--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "node-sass": "^4.9.0",
     "node-sass-globbing": "^0.0.23",
     "nodemon": "^1.17.4",
     "redux-logger": "^3.0.6",
+    "scss-loader": "^0.0.1",
+    "style-loader": "^0.21.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-serve": "^1.0.2"
@@ -27,6 +30,7 @@
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-toastify": "^4.0.1",
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
     "sanitize.css": "^5.0.0",
