--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lean-canvas-prototype",
   "private": true,
   "scripts": {
+    "script": "npx webpack -w",
     "style": "node-sass --importer node_modules/node-sass-globbing/index.js front/scss/style.scss app/assets/stylesheets/style.css",
     "watch": "nodemon --ext scss --watch front --exec 'npm run style'",
     "lint": "node_modules/eslint/bin/eslint.js front/scripts"
@@ -20,7 +21,7 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.11.0",
     "node-sass-globbing": "^0.0.23",
     "nodemon": "^1.17.4",
     "prettier": "1.13.7",
