--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^3.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-tabs": "^3.0.0",
     "react-toastify": "^4.0.1",
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
