update: package.json

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "lean-canvas-prototype",
   "private": true,
   "scripts": {
-    "postinstall": "npm run production",
-    "production": "yarn && yarn run webpack --config ./webpack.config.js --mode production && npm run style",
+    "postinstall": "npm install && npm run production",
+    "production": "npm run webpack --config ./webpack.config.js --mode production && npm run style",
     "script": "npx webpack -w",
     "style": "node-sass --importer node_modules/node-sass-globbing/index.js front/scss/style.scss app/assets/stylesheets/style.css",
     "watch": "nodemon --ext scss --watch front --exec 'npm run style'",
@@ -52,6 +52,7 @@
     "styled-components": "^3.3.0"
   },
   "engines": {
+    "npm": "6.4.1",
     "yarn": "1.x"
   }
 }
