--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "lean-canvas-prototype",
   "private": true,
   "scripts": {
-    "postinstall": "npm install && npm run production",
-    "production": "npm run webpack  --config ./webpack.config.js --mode production && npm run style",
+    "postinstall": "npm install && npx webpack --config ./webpack.config.js --mode production",
     "script": "npx webpack -w",
     "style": "node-sass --importer node_modules/node-sass-globbing/index.js front/scss/style.scss app/assets/stylesheets/style.css",
     "watch": "nodemon --ext scss --watch front --exec 'npm run style'",
