--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
-    "webpack-serve": "^1.0.2"
+    "webpack-serve": "^1.0.2",
+    "yarn": "^1.13.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
