--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "gsap": "^2.1.2",
+    "pixi.js": "^5.0.0-rc.2",
+    "pixi.js-legacy": "^5.0.0-rc.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-icons": "^3.3.0",
